refactoring, can add, shows proofs for added promises

--- a/Views/Cabinet/_ModalCompletePromise.cshtml
+++ b/Views/Cabinet/_ModalCompletePromise.cshtml
@@ -4,6 +4,8 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Complete promise</h4>
+                <div align="right" id="_modal_complete_promise_loader"></div>
+                <h4 class="text-success" id="_modal_complete_promise_result"></h4>
             </div>
             <div class="container-fluid">
                 <form>
