--- a/Views/Cabinet/_ModalCompletePromise.cshtml
+++ b/Views/Cabinet/_ModalCompletePromise.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="modal fade" id="_complete_promise" role="dialog">
+﻿<div class="modal fade" id="_modal_complete_promise" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -16,7 +16,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button id="_complete_promise_btn" type="button" data-dismiss="modal" class="btn btn-primary">Complete</button>
+                <button id="_complete_promise_button" type="button" class="btn btn-primary">Complete</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
