--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -77,7 +77,7 @@
         let _RAZOR_SEND_ASSET = '@Url.Action("SendAsset", "Blockchain", new { type = "__network__", assetName = "__assetName__", addr = "__addr__", amount = "__amount__" })'
         let _RAZOR_ADD_PROMISE = '@Url.Action("Add", "Promises", new { title = "__title__", content = "__content__", complicity = "__complicity__", date = "__date__" })'
         let _RAZOR_GET_PROMISES = '@Url.Action("Get", "Promises", new { address = "__address__" })'
-        let _RAZOR_COMPLETE_PROMISE = '@Url.Action("Complete", "Promises", new { id = "__id__"})'
+        let _RAZOR_COMPLETE_PROMISE = '@Url.Action("Complete", "Promises", new { id = "__id__", proof = "__proof__"})'
 
         let _RAZOR_PROFILE_VIEW_USER_ADDRESS = '@profileViewModel.Address'
 
