wallper page has been changed, about and contact section were changed

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -5,14 +5,23 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 -->
-<div class="jumbotron">
-    <h2>Contacts</h2>
-    <address>
-        Russia, Saint-Petersburg
-    </address>
 
-    <address>
-        <strong>Ankarenko Sergey:</strong> <a href="mailto:ankarenkosergey@example.com">ankarenkosergey@example.com</a><br />
-        <strong>Leonid Markizov:</strong> <a href="mailto:Marketing@example.com">marlonya@iclod.com</a>
-    </address>
+<div class="overlay">
+    <div class="background-img-empty"></div>
+    
+        <div class="background-text">
+            <h1>Contacts</h1>
+            <h3>
+                <address>
+                    Russia, Saint-Petersburg
+                </address>
+
+                <address>
+                    <strong>Ankarenko Sergey:</strong> <a style="color: #ffffff" href="mailto:ankarenkosergey@example.com">ankarenkosergey@example.com</a><br />
+                    <strong>Leonid Markizov:</strong> <a style="color: #ffffff" href="mailto:Marketing@example.com">marlonya@iclod.com</a>
+                </address>
+            </h3>
+    </div>
+
 </div>
+
