--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,23 +5,21 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 -->
-<div class="jumbotron">
-    <h2><a href="https://github.com/SmartPromise">SmartPromise</a></h2>
 
-    <p />
-    SmartPromise is an electronic journal of smart promises developed through Blockchain.
-    User of such an environment receives a reward for each of his fulfilled promises.
-    The concept of the idea contains the possibility to get a strong motivation to action that user pointed in promise.
-    <p />
-    User creates a promise in the journal, sets the deadline for its implementation and at the end of this period provides
-    evidence of the fulfillment of his promise. Then user gets a reward for keeping the promise.
-    Rewards will be issued by crypto assets and it will consist of users contributions.
-    Reward is a contribution multiplied by a factor that depends on difficulty of keeping a promise.
-    Thus by contributing user make a deal with himself. The promise fulfilled - the deal is successful.
-    <p />
-    We set ourselves the goal of promoting the disclosure of personal motivation. If, one day,
-    a person wants to start running in the morning, but he lacks motivation, our project can help him in the implementation of his plan.
-    <p />
-    In future, we plan to develop our idea by expanding SmartPromise concept to SmartContract
-    which will allow to keep transparency of business deals between participants.
+
+<div class="overlay">
+    <div class="background-img-empty"></div>
+    <div class="background-text">
+        <h1><a style="color: #ffffff" href="https://github.com/SmartPromise">Smart Promise</a></h1>
+
+        <h4>
+            SmartPromise is an electronic journal of smart promises developed through Blockchain.
+            User of such an environment receives a reward for each of his fulfilled promises.
+            The concept of the idea contains the possibility to get a strong motivation to action that user pointed in promise.
+        </h4>
+        <h4>
+            We set ourselves the goal of promoting the disclosure of personal motivation. If, one day,
+            a person wants to start running in the morning, but he lacks motivation, our project can help him in the implementation of his plan.
+        </h4>
+    </div>
 </div>
