--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,16 +5,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@section Entrance {
-    <script type="text/javascript">
-        Entrance()
-    </script>
-}
-
-<div class="jumbotron shadowed">
-    <h2>
-        <a class="typewrite" data-period="4000" data-type='[ "Faster Better Stronger", "Motivate yourself with Smart Promise" ]'>
-            <span class="wrap"></span>
-        </a>
-    </h2>
+<div class="overlay">
+    <div  class="background-img"></div>
+    <div class="background-text"></div>
 </div>
