--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,8 +8,42 @@
     padding-right: 15px;
 }
 
-/* QR code generator */
 #qrCode {
     margin: 15px;
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
+    color: white;
+}
+
+.background-img {
+    background-image: url(../../images/entrance_wallpaper.png);
+    height: inherit;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: inherit;
+}
+
+.background-img-empty {
+    background-image: url(../../images/entrance_wallpaper_empty.png);
+    height: inherit;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: inherit;
+}
+
+.background-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
