--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -7,7 +7,7 @@
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
 
 <div id="_friend_find_input">
-    <input id="_find_input" type="text" class="form-control input-style" placeholder=" Type email to find a person" >
+    <input hidden="true" id="_find_input" type="text" class="form-control input-style" placeholder=" Type email to find a person" >
 </div>
 
 <div id="_loader_id"></div>
