--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -18,7 +18,7 @@
 
                 <address>
                     <strong>Ankarenko Sergey:</strong> <a style="color: #ffffff" href="mailto:ankarenkosergey@example.com">ankarenkosergey@example.com</a><br />
-                    <strong>Leonid Markizov:</strong> <a style="color: #ffffff" href="mailto:Marketing@example.com">marlonya@iclod.com</a>
+                    <strong>Leonid Markizov:</strong> <a style="color: #ffffff" href="mailto:Marketing@example.com">marlyonya@icloud.com</a>
                 </address>
             </h3>
     </div>
