#31 responsible design has been updated

--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -11,6 +11,7 @@
 </div>
 
 <div id="_loader_id"></div>
+<div id="_friends_message"></div>
 <h4 class="text-muted" id="_friends_label_id"></h4> 
 
 <div class="list-group container-fluid" id="_friends_list"></div>
