--- a/Views/Cabinet/Profile.cshtml
+++ b/Views/Cabinet/Profile.cshtml
@@ -10,9 +10,9 @@
 
 @Html.Partial("_ModalCompletePromise")
 @Html.Partial("_ModalCreatePromise")
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-sm-7">
+        <div>
 
             
             <div class="promise-stats-block">
@@ -29,7 +29,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-7">
+        <div>
             <hr/>
             <div class="loader" id="_promises_loader"></div>
             <div id="_promises_id"></div>
