some styles were added

--- a/Views/Cabinet/_ModalPaymentsDetails.cshtml
+++ b/Views/Cabinet/_ModalPaymentsDetails.cshtml
@@ -15,10 +15,9 @@
             </div>
             <div align="center" class="container-fluid">
                 <br/>
-                <h5 class="bold" id="_modal_payments_address">@label</h5>
-                <div id="_payment_qrCode"></div>
-                <br/>
-                <small>@Model.Address</small>
+                <div class="bold" id="_modal_payments_address">@label</div>
+                <div style="padding:10px;" id="_payment_qrCode"></div>
+                <div>@Model.Address</div>
             </div>
 
             <div class="modal-footer">
