--- a/Views/Cabinet/_OtherUserProfile.cshtml
+++ b/Views/Cabinet/_OtherUserProfile.cshtml
@@ -11,8 +11,8 @@
          src="@avatar" width="300" height="250"
          class="img-responsive img-thumbnail main-avatar" alt="Avatar" />
 
-    <div align="center" class="caption">
-        <h3>@Model.Email</h3>
+    <div style="margin:3px;" align="center" class="caption">
+        <h4>@Model.Email</h4>
         
         <small class="bold text-muted">@status</small>
         <small id="_friend_status" class="bold text-muted">&nbsp;&nbsp;&nbsp;&nbsp;@Model.FriendStatus</small>
