--- a/Views/Cabinet/_YourProfile.cshtml
+++ b/Views/Cabinet/_YourProfile.cshtml
@@ -10,8 +10,8 @@
          src="@avatar" width = "300" height = "250"
          class="img-responsive img-thumbnail main-avatar" alt="Avatar" />
 
-    <div align="center" class="caption">
-        <h3>@Model.Email</h3>
+    <div style="margin:3px;" align="center" class="caption">
+        <h4>@Model.Email</h4>
         <a role="button" class="btn btn-link" data-toggle="modal" data-target="#_payment_details">Info</a>
         <a role="button" class="btn btn-link" data-toggle="modal" data-target="#_transaction_history_modal">History</a>
     </div>
