--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -6,19 +6,14 @@
 
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
 
-<div id="_friend_find_input">
-    <input hidden="true" id="_find_input" type="text" class="form-control input-style" placeholder=" Type email to find a person" >
-</div>
+<div id="_friend_find_input"></div>
 
 <div id="_loader_id"></div>
 <div id="_friends_message"></div>
 <h4 class="text-muted" id="_friends_label_id"></h4> 
 
 <div class="list-group container-fluid" id="_friends_list"></div>
-
-
 <h4 class="text-muted" id="_others_label_id"></h4>
 <div id="_other_users_list" class="list-group container-fluid"></div>
-
 <h4 class="text-muted" id="_pending_label_id"></h4>
 <div id="_pending_users_list" class="list-group container-fluid"></div>
