--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -4,9 +4,9 @@
 @{
     Layout = "/Views/Shared/_Layout.cshtml";
     ProfileViewModel profileViewModel = ViewData.GetProfileViewModel();
+    
     if (profileViewModel == null)
     {
-
         var owner = await userManager.GetUserAsync(User);
         profileViewModel = new ProfileViewModel
         {
@@ -17,7 +17,7 @@
             IsOnline = true,
             Avatar = owner.Avatar,
             AvatarContentType = owner.AvatarContentType
-            
+
         };
     }
 }
@@ -78,6 +78,7 @@
         let _RAZOR_ADD_PROMISE = '@Url.Action("Add", "Promises", new { title = "__title__", content = "__content__", complicity = "__complicity__", date = "__date__" })'
         let _RAZOR_GET_PROMISES = '@Url.Action("Get", "Promises", new { address = "__address__" })'
         let _RAZOR_COMPLETE_PROMISE = '@Url.Action("Complete", "Promises", new { id = "__id__", proof = "__proof__"})'
+        let _RAZOR_IS_YOUR_OWN_PAGE = '@Html.Raw(Json.Serialize(profileViewModel.IsYourProfile))'
 
         let _RAZOR_PROFILE_VIEW_USER_ADDRESS = '@profileViewModel.Address'
 
