--- a/Views/Cabinet/_ModalPay.cshtml
+++ b/Views/Cabinet/_ModalPay.cshtml
@@ -32,7 +32,7 @@
 
                     <div class="form-group">
                         <h5 class="bold">Amount</h5>
-                        <input id="_asset_amount" type="number" class="form-control" placeholder="Type amount to send">
+                        <input id="_asset_amount" type="number" min="0" class="form-control" placeholder="Type amount to send">
                     </div>
                 </form>
             </div>
