--- a/Views/Cabinet/_YourProfile.cshtml
+++ b/Views/Cabinet/_YourProfile.cshtml
@@ -14,5 +14,6 @@
         <h4>@Model.Email</h4>
         <a role="button" class="btn btn-link" data-toggle="modal" data-target="#_payment_details">Info</a>
         <a role="button" class="btn btn-link" data-toggle="modal" data-target="#_transaction_history_modal">History</a>
+        <a role="button" class="btn btn-link" data-toggle="modal" data-target="#_mint_modal">Mint</a>
     </div>
 </div>
