--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Promises.Models.AccountViewModels
 @using Promises.Models.ManageViewModels
 @using Promises.Models.CabinetViewModels
+@using Promises.Utils
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
