--- a/Views/Cabinet/_ModalPay.cshtml
+++ b/Views/Cabinet/_ModalPay.cshtml
@@ -19,6 +19,7 @@
                         <select class="form-control" id="_asset_type">
                             <option value="neo">NEO</option>
                             <option value="gas">GAS</option>
+                            <option value="sc">SC</option>
                         </select>
                     </div>
 
