introduction video has been added to login and registration pages

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -29,7 +29,12 @@
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
-</div>
+    <div>
+        <div align="center">
+            <iframe width="600" height="400" src="https://www.youtube.com/embed/eCpQqc3TAmQ" frameborder="3" allowfullscreen></iframe>
+
+        </div>
+    </div>
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
