--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -49,9 +49,12 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <!--
+    <div>
+        
+            <div align="center">
+                <iframe width="600" height="400" src="https://www.youtube.com/embed/eCpQqc3TAmQ" frameborder="1" allowfullscreen></iframe>
+            
+                </div><!--
             <h4>Use another service to log in.</h4>
             <hr />
             @{
@@ -80,7 +83,6 @@
                 }
             }
                 -->
-        </section>
     </div>
 </div>
 
